# sieciprojekt

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: UI.hpp  boxCollision.hpp  bullet.hpp  direction.hpp  game.hpp  map.hpp  mapTemplate.hpp  player.hpp  random.hpp  tcpClient.hpp  tcpServer.hpp  wall.hpp  window.hpp
src/: MapTemplate.cpp  UI.cpp  boxCollision.cpp  bullet.cpp  direction.cpp  game.cpp  map.cpp  player.cpp  random.cpp  wall.cpp  window.cpp
src/client/: main.cpp  tcpClient.cpp
src/server/: main.cpp  tcpServer.cpp
